# meshMurammatOnline

./: README.md  app.js  home.html  package-lock.json  package.json  yay.txt
public/routes/: CMakeLists.txt  OBJExporter.js  OBJLoader.js  OrbitControls.js  PLYExporter.js  PLYLoader.js  blobby-intersections.ply  bun_zipper.off  bun_zipper.ply  cat0.off  cat0.ply  cow-holes.ply  david13.off  david13.ply  detected_hole.ply  diana_hole_top.ply  double-torus-3-holes.ply  edited_bunny.ply  holefill.ply  home.html  index.js  main.cpp  mesh.cpp  meshViewer.html  meshViewer.js  sphere.off  sphere.ply  squirrel_sideholes.ply  teapot-holes.ply  teapot.ply  three.module.js  welcome.html
public/stylesheets/: style.css
public/uploads/: polygonaloutput.ply  triangulatedoutput.ply
